; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_bte.c_bte_disconnect.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/lwbt/extr_bte.c_bte_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bte_pcb = type { i32*, i32*, i64 }

@ERR_OK = common dso_local global i32 0, align 4
@ERR_VAL = common dso_local global i32 0, align 4
@STATE_DISCONNECTING = common dso_local global i64 0, align 8
@l2cap_disconnect_cfm = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bte_disconnect(%struct.bte_pcb* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.bte_pcb*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.bte_pcb* %0, %struct.bte_pcb** %3, align 8
  %6 = load i32, i32* @ERR_OK, align 4
  store i32 %6, i32* %5, align 4
  %7 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %8 = icmp eq %struct.bte_pcb* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* @ERR_VAL, align 4
  store i32 %10, i32* %2, align 4
  br label %43

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @_CPU_ISR_Disable(i64 %12)
  %14 = load i64, i64* @STATE_DISCONNECTING, align 8
  %15 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %16 = getelementptr inbounds %struct.bte_pcb, %struct.bte_pcb* %15, i32 0, i32 2
  store i64 %14, i64* %16, align 8
  %17 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %18 = getelementptr inbounds %struct.bte_pcb, %struct.bte_pcb* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %27

21:                                               ; preds = %11
  %22 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %23 = getelementptr inbounds %struct.bte_pcb, %struct.bte_pcb* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = load i32, i32* @l2cap_disconnect_cfm, align 4
  %26 = call i32 @l2ca_disconnect_req(i32* %24, i32 %25)
  store i32 %26, i32* %5, align 4
  br label %39

27:                                               ; preds = %11
  %28 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %29 = getelementptr inbounds %struct.bte_pcb, %struct.bte_pcb* %28, i32 0, i32 0
  %30 = load i32*, i32** %29, align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %38

32:                                               ; preds = %27
  %33 = load %struct.bte_pcb*, %struct.bte_pcb** %3, align 8
  %34 = getelementptr inbounds %struct.bte_pcb, %struct.bte_pcb* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* @l2cap_disconnect_cfm, align 4
  %37 = call i32 @l2ca_disconnect_req(i32* %35, i32 %36)
  store i32 %37, i32* %5, align 4
  br label %38

38:                                               ; preds = %32, %27
  br label %39

39:                                               ; preds = %38, %21
  %40 = load i64, i64* %4, align 8
  %41 = call i32 @_CPU_ISR_Restore(i64 %40)
  %42 = load i32, i32* %5, align 4
  store i32 %42, i32* %2, align 4
  br label %43

43:                                               ; preds = %39, %9
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i32 @_CPU_ISR_Disable(i64) #1

declare dso_local i32 @l2ca_disconnect_req(i32*, i32) #1

declare dso_local i32 @_CPU_ISR_Restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
